fix: replace List.getFirst/getLast usages for Java compatibility